update achievement resilence, fix coach booking